crates/aura-macros/tests/boundaries/semantic_owner_missing_proof.stderr
error: semantic_owner requires `proof = TypePath`
  --> tests/boundaries/semantic_owner_missing_proof.rs:5:1
   |
 5 | / #[aura_macros::semantic_owner(
 6 | |     owner = "demo-owner",
 7 | |     wrapper = "missing_proof_wrapper",
 8 | |     terminal = "publish_done",
...  |
13 | |     category = "move_owned"
14 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `aura_macros::semantic_owner` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `OperationContext` and `TraceContext`
 --> tests/boundaries/semantic_owner_missing_proof.rs:1:17
  |
1 | use aura_core::{OperationContext, TraceContext};
  |                 ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
